added test for Name Not Found case

--- a/src/main/resources/jndi.properties
+++ b/src/main/resources/jndi.properties
@@ -1,2 +1,10 @@
+# This is the default file that describes the overall configuration of JNDI. It describes the implementation of the
+# JNDI and some additional implementation-specific configuration. javax.naming.InitialContext will use this file
+# internally to initialise the JNDI.
+
+#The implementation of the JNDI to be initialized and used to store/retrieve objects. Will be
+# initialized inside of InitialContext
 java.naming.factory.initial=org.osjava.sj.SimpleContextFactory
+# Implementation-specific configuration. In this particular case it tells Simple JNDI where the objects are stored
+# to be put inside of JNDI.
 org.osjava.sj.root=jndi-dir
